Fix alignment of links for tall teasers

--- a/src/elife_profile/modules/custom/elife_podcast/css/podcast-teaser.css
+++ b/src/elife_profile/modules/custom/elife_podcast/css/podcast-teaser.css
@@ -1,10 +1,11 @@
 .podcast-teaser {
   list-style: none;
-  padding: 0;
+  padding: 0 0 0 170px;
   margin: 1em 0;
 }
 
 div.panel-pane div.node.podcast-teaser {
+  padding: 0 0 0 170px;
   margin: 1em 0;
 }
 
@@ -34,8 +35,9 @@ div.panel-pane div.node.podcast-teaser--compact {
 
 .podcast-teaser__image {
   float: left;
-  margin-right: 20px;
-  max-width: 200px;
+  margin-left: -170px;
+  width: 150px;
+  height: auto;
 }
 
 .podcast-teaser--compact .podcast-teaser__text {
